# SnickersHunter

./: .gitignore  CMakeLists.txt  README.md
common/: controls.cpp  controls.hpp  texture.cpp
hunter/: ColorFragmentShader.fragmentshader  GreenFragmentShader.fragmentshader  TextureFragmentShader 2.fragmentshader  TextureFragmentShader.fragmentshader  TransformVertexShader 2.vertexshader  TransformVertexShader.vertexshader  controls.hpp  engine.cpp  engine.hpp  hunter  main.cpp  sphere.hpp
hunter/src/: hunter
hw4/: EnemyVertexShader.vertexshader  FloorFragmentShader.fragmentshader  FloorVertexShader.vertexshader  GreenFragmentShader.fragmentshader  SphereVertexShader.vertexshader  TextureFragmentShader.fragmentshader  hw4  main.cpp
task1/: GreenFragmentShader.fragmentshader  task1  task1.cpp
task2/: RedFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  task2  task2.cpp
task3/: task3  task3.cpp
